# Ya-lo-borro

./: .gitmodules  CMakeLists.txt  Doxyfile  Install.md  config.json
.github/actions/building/: action.yml
.github/actions/documentation/: action.yml
.github/actions/doxygen/: action.yml
.github/workflows/: QAWorkflow.yml
Metrics_Monitoring_System/: .gitignore  CMakeLists.txt  Doxyfile  build.sh
Metrics_Monitoring_System/.github/actions/building/: action.yml
Metrics_Monitoring_System/include/: expose_metrics.h  metrics.h
Metrics_Monitoring_System/src/: expose_metrics.c  main.c  metrics.c
coverage/: coverage.commands.c.75bd1443560c3507928c1f5d5d351e21.html  coverage.html  coverage.monitor_commands.c.9e8d7e1201bcbb452190d18640548a3e.html  coverage.utils.c.74710e3ecbe94109f39de34133e1c8ca.html
include/: commands.h  monitor_commands.h  utils.h
src/: commands.c  main.c  monitor_commands.c  utils.c
tests/: CMakeLists.txt
tests/test_commands/: CMakeLists.txt  test_batch_file.c  test_cd.c  test_echo.c  test_execute_command.c  test_execute_program.c  test_help.c  test_internal_command.c  test_parse_input.c  test_parse_pipes.c  test_piped_commands.c  test_quit_shell.c
tests/test_monitor/: CMakeLists.txt  test_monitor_command.c  test_show_config.c  test_start_monitor.c  test_status_monitor.c  test_stop_monitor.c  test_update_config.c
tests/test_utils/: CMakeLists.txt  test_print_jobs.c  test_prompt.c  test_utils.c  test_welcome_message.c
